--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,7 +3,7 @@
 #   Dependencies are pulled into the play and executed in order
 #   of appearance.
 dependencies:
-  - { role: silpion.util }
+  - { role: groover.util }
 
 
 # https://galaxy.ansibleworks.com
